// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBar renders 1`] = `
<Memo(CanvasCommandBar)
  disabled={false}
  height={-1}
  items={
    Array [
      Object {
        "checked": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "1",
          "values": Object {
            "ItemDisplayName": "Open",
            "ItemEnabled": true,
            "ItemIconColor": "blue",
            "ItemIconName": "Open",
            "ItemIconOnly": false,
            "ItemKey": "commandOpen",
          },
        },
        "divider": undefined,
        "enabled": true,
        "farItem": undefined,
        "iconColor": "blue",
        "iconName": "Open",
        "iconOnly": false,
        "id": "1",
        "isHeader": undefined,
        "key": "commandOpen",
        "name": "Open",
        "overflow": undefined,
        "parentItemKey": undefined,
        "split": undefined,
        "topDivider": undefined,
        "visible": undefined,
      },
      Object {
        "checked": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "2",
          "values": Object {
            "ItemDisplayName": "New",
            "ItemEnabled": false,
            "ItemIconColor": "blue",
            "ItemIconName": "New",
            "ItemIconOnly": true,
            "ItemKey": "commandNew",
          },
        },
        "divider": undefined,
        "enabled": false,
        "farItem": undefined,
        "iconColor": "blue",
        "iconName": "New",
        "iconOnly": true,
        "id": "2",
        "isHeader": undefined,
        "key": "commandNew",
        "name": "New",
        "overflow": undefined,
        "parentItemKey": undefined,
        "split": undefined,
        "topDivider": undefined,
        "visible": undefined,
      },
      Object {
        "checked": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "3",
          "values": Object {
            "ItemDisplayName": "Save",
            "ItemEnabled": false,
            "ItemFarItem": true,
            "ItemIconColor": "green",
            "ItemIconName": "Save",
            "ItemIconOnly": true,
            "ItemKey": "commandSave",
          },
        },
        "divider": undefined,
        "enabled": false,
        "farItem": true,
        "iconColor": "green",
        "iconName": "Save",
        "iconOnly": true,
        "id": "3",
        "isHeader": undefined,
        "key": "commandSave",
        "name": "Save",
        "overflow": undefined,
        "parentItemKey": undefined,
        "split": undefined,
        "topDivider": undefined,
        "visible": undefined,
      },
    ]
  }
  onSelected={[Function]}
  setFocus=""
  tabIndex={5}
  themeJSON={null}
  visible={true}
  width={-1}
/>
`;

exports[`CommandBar renders dummy items when no items configured 1`] = `
<Memo(CanvasCommandBar)
  disabled={false}
  height={-1}
  items={
    Array [
      Object {
        "iconName": "Unknown",
        "id": "1",
        "key": "1",
        "name": "Item 1",
      },
      Object {
        "iconName": "Unknown",
        "id": "2",
        "key": "2",
        "name": "Item 2",
      },
      Object {
        "iconName": "Unknown",
        "id": "3",
        "key": "3",
        "name": "Item 3",
      },
    ]
  }
  onSelected={[Function]}
  setFocus=""
  tabIndex={5}
  themeJSON={null}
  visible={true}
  width={-1}
/>
`;

exports[`CommandBar renders subitems and shows the flyout menu 1`] = `
<Memo(CanvasCommandBar)
  disabled={false}
  height={-1}
  items={
    Array [
      Object {
        "checked": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "1",
          "values": Object {
            "ItemDisplayName": "Open",
            "ItemEnabled": true,
            "ItemIconColor": "blue",
            "ItemIconName": "Open",
            "ItemIconOnly": false,
            "ItemKey": "commandOpen",
          },
        },
        "divider": undefined,
        "enabled": true,
        "farItem": undefined,
        "iconColor": "blue",
        "iconName": "Open",
        "iconOnly": false,
        "id": "1",
        "isHeader": undefined,
        "key": "commandOpen",
        "name": "Open",
        "overflow": undefined,
        "parentItemKey": undefined,
        "split": undefined,
        "topDivider": undefined,
        "visible": undefined,
      },
      Object {
        "checked": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "2",
          "values": Object {
            "ItemDisplayName": "New",
            "ItemEnabled": false,
            "ItemIconColor": "blue",
            "ItemIconName": "New",
            "ItemIconOnly": true,
            "ItemKey": "commandNew",
          },
        },
        "divider": undefined,
        "enabled": false,
        "farItem": undefined,
        "iconColor": "blue",
        "iconName": "New",
        "iconOnly": true,
        "id": "2",
        "isHeader": undefined,
        "key": "commandNew",
        "name": "New",
        "overflow": undefined,
        "parentItemKey": undefined,
        "split": undefined,
        "topDivider": undefined,
        "visible": undefined,
      },
      Object {
        "checked": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "3",
          "values": Object {
            "ItemDisplayName": "Save",
            "ItemEnabled": false,
            "ItemFarItem": true,
            "ItemIconColor": "green",
            "ItemIconName": "Save",
            "ItemIconOnly": true,
            "ItemKey": "commandSave",
          },
        },
        "divider": undefined,
        "enabled": false,
        "farItem": true,
        "iconColor": "green",
        "iconName": "Save",
        "iconOnly": true,
        "id": "3",
        "isHeader": undefined,
        "key": "commandSave",
        "name": "Save",
        "overflow": undefined,
        "parentItemKey": undefined,
        "split": undefined,
        "topDivider": undefined,
        "visible": undefined,
      },
      Object {
        "checked": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "5",
          "values": Object {
            "ItemDisplayName": "Sub 1",
            "ItemIconName": "New",
            "ItemKey": "sub1",
            "ItemParentKey": "commandOpen",
          },
        },
        "divider": undefined,
        "enabled": undefined,
        "farItem": undefined,
        "iconColor": undefined,
        "iconName": "New",
        "iconOnly": undefined,
        "id": "5",
        "isHeader": undefined,
        "key": "sub1",
        "name": "Sub 1",
        "overflow": undefined,
        "parentItemKey": "commandOpen",
        "split": undefined,
        "topDivider": undefined,
        "visible": undefined,
      },
      Object {
        "checked": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "6",
          "values": Object {
            "ItemDisplayName": "Sub 2",
            "ItemIconName": "Save",
            "ItemKey": "sub2",
            "ItemParentKey": "commandOpen",
          },
        },
        "divider": undefined,
        "enabled": undefined,
        "farItem": undefined,
        "iconColor": undefined,
        "iconName": "Save",
        "iconOnly": undefined,
        "id": "6",
        "isHeader": undefined,
        "key": "sub2",
        "name": "Sub 2",
        "overflow": undefined,
        "parentItemKey": "commandOpen",
        "split": undefined,
        "topDivider": undefined,
        "visible": undefined,
      },
    ]
  }
  onSelected={[Function]}
  setFocus=""
  tabIndex={5}
  themeJSON={null}
  visible={true}
  width={-1}
/>
`;
